<resources>
    <string name="app_name">iOrder</string>
    <string name="version_1_0">version 1.0</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Not registered yet?</string>
    <string name="signup">Sign Up</string>
    <string name="nick">Name</string>
    <string name="confirmPass">Confirm password</string>
    <string name="surname">Surname</string>
    <string name="emailError">E-mail address should look like: user@domain.com</string>
    <string name="passwordError">Password should not be longer than 8 characters</string>
    <string name="loading">Loading...</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="nameError">Name must not be empty</string>
    <string name="surnameError">Surname must not be empty</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_location">Locations</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>
    <string name="object_name">Establishment</string>
    <string name="point_the_camera_to_qr_code_for_scanning">Point the camera to QR code for scanning</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_more_products">Add more products</string>
    <string name="current_bill">Current bill:</string>
    <string name="_0_00_hrk">0,00 HRK</string>
    <string name="username">Username</string>
    <string name="usernameError">Username must not be empty</string>
    <string name="cart_title">Current cart</string>
    <string name="order">Order</string>
    <string name="delete_all">Delete All</string>
    <string name="empty_cart">Empty cart</string>
    <string name="dismiss">Dismiss</string>
    <string name="order_again">Order again</string>
    <string name="empty_history">Empty history</string>
</resources>
