<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_background"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/IOrder.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/signUpToolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/colorPrimary"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:title="@string/signup">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageView
                android:id="@+id/email_image"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_email" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:textColorHint="#777777"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/IOrder.TextField"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/name"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_username" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/etNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="0.5"
                android:textColorHint="#777777"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/IOrder.TextField"
                    android:hint="@string/nick"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etSurnameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="@dimen/activity_vertical_marginSmaller"
                android:layout_weight="0.5"
                android:textColorHint="#777777"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etSurname"
                    style="@style/IOrder.TextField"
                    android:hint="@string/surname"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageView
                android:id="@+id/lock"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ic_lock" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="30dp"
                android:textColorHint="#777777"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="src_in">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/IOrder.TextField"
                    android:hint="@string/password"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#777777"
                    android:textColorLink="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etConfirmPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="70dp"
            android:textColorHint="#777777"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="src_in">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etConfirmPass"
                style="@style/IOrder.TextField"
                android:hint="@string/confirmPass"
                android:inputType="textEmailAddress"
                android:textColorHint="#777777"
                android:textColorLink="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/progress_margin"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom">

            <Button
                android:id="@+id/signup_button"
                style="@style/IOrder.Button"
                android:text="@string/signup" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>