<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context="hr.fer.oobl.iorder.iorder.ui.login.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/cool_logo_2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/version_1_0"
        android:textColor="@android:color/darker_gray"
        android:textSize="9sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631">

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_vertical_marginBigger"
            android:layout_marginStart="@dimen/activity_vertical_marginBigger"
            android:layout_marginTop="@dimen/activity_vertical_marginBigger"
            android:background="@drawable/login_input_bg"
            android:focusableInTouchMode="true"
            android:foreground="@android:color/transparent"
            android:visibility="visible">

            <ImageView
                android:id="@+id/email_image"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/appbar_padding_top"
                android:layout_marginTop="21dp"
                android:src="@drawable/ic_email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="@dimen/appbar_padding_top"
                android:textColorHint="#777777"
                app:errorEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/IOrder.TextField"
                    android:textColorLink="@color/colorPrimary"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_vertical_marginBigger"
            android:layout_marginStart="@dimen/activity_vertical_marginBigger"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:background="@drawable/login_input_bg"
            android:focusableInTouchMode="true"
            android:visibility="visible">

            <ImageView
                android:id="@+id/lock"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_marginStart="@dimen/appbar_padding_top"
                android:layout_marginTop="21dp"
                android:src="@drawable/ic_lock" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/appbar_padding_top"
                android:textColorHint="#777777"
                app:errorEnabled="false"
                app:passwordToggleDrawable="@drawable/ic_visibility_on"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/IOrder.TextField"
                    android:textColorLink="@color/colorPrimary"
                    android:hint="@string/password"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_marginSmaller"
            android:visibility="gone" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_marginSmaller"
            android:background="@drawable/rounded_edittext"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/signup_button"
            style="@style/Text.Small.Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_marginSmaller"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/register"
            android:textColor="@android:color/darker_gray"
            android:visibility="visible" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
